--- a/PythonApi/.env.example
+++ b/PythonApi/.env.example
@@ -1,3 +1,3 @@
 # OpenAI Configuration
-OPENAI_API_KEY=your_openai_api_key_here
-OPENAI_MODEL=gpt-4o-mini
+GROQ_API_KEY=your_groq_api_key_here
+GROQ_MODEL=llama-3.1-8b-instant
